# tmgw-wifi-authorizer

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
docs/: automation-win.md
src/: log.rs  main.rs
