[package]
name = "tmgw-wifi-autholizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = false
opt-level = 3
lto = true

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
chrono = "0.4"
dirs = "4.0"
