[package]
name = "tmgw-wifi-authorizer"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = false
opt-level = 3
lto = true

[dependencies]
once_cell = "1.16.0"
reqwest = { version = "0.11", features = ["blocking"] }
log = "0.4.17"
simplelog = "0.12.0"
dirs = "5.0.0"
clap = { version = "4.0.32", features = ["derive", "env"] }
